# probonto

./: README.md  pyproject.toml
data/: convert_n3.py  probonto.nt  urls.txt
src/probonto/: codegen.py  ebi.py  owl.py
tests/: test_probonto.py
